split mysql from shell.md